--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -157,7 +157,7 @@ We expect that proposals will be led by UK universities or public sector researc
 
 ### What exactly is a testbed?
 
-We are generally expecting testbeds to be a combination of novel hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them.
+We are generally expecting testbeds to be a combination of novel hardware and supporting software, and the people to help ExCALIBUR working groups and the wider research community to exploit them.
 
 ### What testbeds has the programme already supported?
 
@@ -166,6 +166,10 @@ Please see our [testbeds page](/testbeds) for details of the testbeds that the p
 ### What is ExCALIBUR and what are the ExCALIBUR working groups?
 
 Please see our [ExCALIBUR page](/excalibur) for more information about the ExCALIBUR initiative. Details of ExCALIBUR working groups are available from UKRI's [Grants on the Web](https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&RankingListId=1-816PGO) site.
+
+### What is enabling software?
+
+Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software enables applications written by researchers to use the hardware.
 
 ### Who can be a partner on an ExCALIBUR H&ES case for support?
 
@@ -177,7 +181,7 @@ We expect that ExCALIBUR H&ES projects will generally include Research Software 
 
 ### What can I request funding for in my case for support?
 
-ExCALIBUR H&ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project, e.g. RSE or Research Operations (ResOps) effort.
+ExCALIBUR H&ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project. We expect that this will typically be RSE or Research Operations (ResOps) effort.
 
 ### What is the timeframe for my grant if my case for support is successful?
 
