--- a/faq.html
+++ b/faq.html
@@ -157,7 +157,7 @@
 
 <h3 id="what-exactly-is-a-testbed">What exactly is a testbed?</h3>
 
-<p>We are generally expecting testbeds to be a combination of novel hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them.</p>
+<p>We are generally expecting testbeds to be a combination of novel hardware and supporting software, and the people to help ExCALIBUR working groups and the wider research community to exploit them.</p>
 
 <h3 id="what-testbeds-has-the-programme-already-supported">What testbeds has the programme already supported?</h3>
 
@@ -166,6 +166,10 @@
 <h3 id="what-is-excalibur-and-what-are-the-excalibur-working-groups">What is ExCALIBUR and what are the ExCALIBUR working groups?</h3>
 
 <p>Please see our <a href="/excalibur">ExCALIBUR page</a> for more information about the ExCALIBUR initiative. Details of ExCALIBUR working groups are available from UKRI’s <a href="https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&amp;RankingListId=1-816PGO">Grants on the Web</a> site.</p>
+
+<h3 id="what-is-enabling-software">What is enabling software?</h3>
+
+<p>Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software enables applications written by researchers to use the hardware.</p>
 
 <h3 id="who-can-be-a-partner-on-an-excalibur-hes-case-for-support">Who can be a partner on an ExCALIBUR H&amp;ES case for support?</h3>
 
@@ -177,7 +181,7 @@
 
 <h3 id="what-can-i-request-funding-for-in-my-case-for-support">What can I request funding for in my case for support?</h3>
 
-<p>ExCALIBUR H&amp;ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project, e.g. RSE or Research Operations (ResOps) effort.</p>
+<p>ExCALIBUR H&amp;ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project. We expect that this will typically be RSE or Research Operations (ResOps) effort.</p>
 
 <h3 id="what-is-the-timeframe-for-my-grant-if-my-case-for-support-is-successful">What is the timeframe for my grant if my case for support is successful?</h3>
 
