--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -169,7 +169,7 @@ Please see our [ExCALIBUR page](/excalibur) for more information about the ExCAL
 
 ### What is enabling software?
 
-Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software enables applications written by researchers to use the hardware.
+Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software *enables* applications written by researchers to use the hardware.
 
 ### Who can be a partner on an ExCALIBUR H&ES case for support?
 
