--- a/faq.html
+++ b/faq.html
@@ -169,7 +169,7 @@
 
 <h3 id="what-is-enabling-software">What is enabling software?</h3>
 
-<p>Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software enables applications written by researchers to use the hardware.</p>
+<p>Enabling software includes digital research infrastructure such as libraries, toolkits, compilers, debuggers and schedulers. This software <em>enables</em> applications written by researchers to use the hardware.</p>
 
 <h3 id="who-can-be-a-partner-on-an-excalibur-hes-case-for-support">Who can be a partner on an ExCALIBUR H&amp;ES case for support?</h3>
 
