--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -183,6 +183,18 @@ We expect that ExCALIBUR H&ES projects will generally include Research Software 
 
 ExCALIBUR H&ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project. We expect that this will typically be RSE or Research Operations (ResOps) effort.
 
+### What staffing elements can I include in my case for support?
+
+We would generally expect staff effort for projects ExCALIBUR H&ES funds to be in one or more of the following areas:
+
+* Systems - setting up the testbed - making sure the test bed can operate
+* Research Operations (ResOps) is the adoption of the DevOps toolchain to support research purposes. It is a set of practices that combines software development (Dev) and IT operations (Ops).  It aims to shorten the systems development life cycle and provide continuous delivery with high software quality.   Making sure the testbed functions as specced and can be adapted
+* Research Software Engineering (RSE) - creating or adapting enabling software for the testbed so that it can function as a testbed
+
+In order to ask for funding for people you therefore have to be very clear what the testbed is for and what it is testing/developing. We expect projects to include an element of RSE effort, which will form the link between the H&ES project and ExCALIBUR working groups wishing to make use of the testbed.
+
+Where possible we would encourage applicants to buy out time of existing staff members rather than aiming to create new fixed term posts, as experience has shown that the latter can be difficult to recruit and retain staff for. This is a model that a number of universities have now used successfully to build up a critical mass of in-house Research Software Engineering expertise. Applicants then have discretion in how they choose how to backfill for the staff who will be working on the project.
+
 ### What is the timeframe for my grant if my case for support is successful?
 
 Grants will be awarded for the following financial (tax) year, so for example awards from the September 2020 call will go live in April 2021.
