--- a/faq.html
+++ b/faq.html
@@ -188,9 +188,9 @@
 <p>We would generally expect staff effort for projects ExCALIBUR H&amp;ES funds to be in one or more of the following areas:</p>
 
 <ul>
-  <li><em>Systems</em> - setting up the testbed - making sure the test bed can operate</li>
-  <li><em>Research Operations (ResOps)</em> is the adoption of the DevOps toolchain to support research purposes. It is a set of practices that combines software development (Dev) and IT operations (Ops).  It aims to shorten the systems development life cycle and provide continuous delivery with high software quality.   Making sure the testbed functions as specced and can be adapted</li>
-  <li><em>Research Software Engineering (RSE)</em> - creating or adapting enabling software for the testbed so that it can function as a testbed</li>
+  <li><strong>Systems</strong> - setting up the testbed - making sure the test bed can operate</li>
+  <li><strong>Research Operations (ResOps)</strong> is the adoption of the DevOps toolchain to support research purposes. It is a set of practices that combines software development (Dev) and IT operations (Ops).  It aims to shorten the systems development life cycle and provide continuous delivery with high software quality.   Making sure the testbed functions as specced and can be adapted</li>
+  <li><strong>Research Software Engineering (RSE)</strong> - creating or adapting enabling software for the testbed so that it can function as a testbed</li>
 </ul>
 
 <p>In order to ask for funding for people you therefore have to be very clear what the testbed is for and what it is testing/developing. We expect projects to include an element of RSE effort, which will form the link between the H&amp;ES project and ExCALIBUR working groups wishing to make use of the testbed.</p>
