--- a/_pages/funding.html
+++ b/_pages/funding.html
@@ -178,8 +178,9 @@ We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur
 * Milestones and outputs
 * Risk register
 
-A [Frequently Asked Questions](/faq) document is available which describes the ExCALIBUR H&ES open call process and provides guidance on scope and eligibility for projects.
+A [Frequently Asked Questions](/faq) document is available which describes the ExCALIBUR H&ES open call process and provides guidance on scope and eligibility for projects. We have also produced a short video which walks you through what is required in an ExCALIBUR H&ES case for support:
 
+<iframe src="https://www.youtube.com/embed/KD0Yz2hKRi8" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Contact us
 
