--- a/funding.html
+++ b/funding.html
@@ -205,7 +205,9 @@
   <li>Risk register</li>
 </ul>
 
-<p>A <a href="/faq">Frequently Asked Questions</a> document is available which describes the ExCALIBUR H&amp;ES open call process and provides guidance on scope and eligibility for projects.</p>
+<p>A <a href="/faq">Frequently Asked Questions</a> document is available which describes the ExCALIBUR H&amp;ES open call process and provides guidance on scope and eligibility for projects. We have also produced a short video which walks you through what is required in an ExCALIBUR H&amp;ES case for support:</p>
+
+<iframe src="https://www.youtube.com/embed/KD0Yz2hKRi8" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
 <h2 id="contact-us">Contact us</h2>
 
