--- a/faq.html
+++ b/faq.html
@@ -197,9 +197,21 @@
 
 <p>Where possible we would encourage applicants to buy out time of existing staff members rather than aiming to create new fixed term posts, as experience has shown that the latter can be difficult to recruit and retain staff for. This is a model that a number of universities have now used successfully to build up a critical mass of in-house Research Software Engineering expertise. Applicants then have discretion in how they choose how to backfill for the staff who will be working on the project.</p>
 
+<h3 id="can-i-claim-for-staff-time-to-supervise-people-working-on-the-project">Can I claim for staff time to supervise people working on the project?</h3>
+
+<p>No - because this is a capital only project, spend is limited to software, hardware and bought-out contractor effort to create digital assets. Staff time for supervision can be a contribution from your institution.</p>
+
 <h3 id="what-is-the-timeframe-for-my-grant-if-my-case-for-support-is-successful">What is the timeframe for my grant if my case for support is successful?</h3>
 
 <p>Grants will be awarded for the following financial (tax) year, so for example awards from the September 2020 call will go live in April 2021.</p>
+
+<h3 id="who-will-issue-the-grant">Who will issue the grant?</h3>
+
+<p>The grant will be issued by the Science and Technology Facilities Council (STFC).</p>
+
+<h3 id="what-percentage-of-my-project-budget-will-hes-support">What percentage of my project budget will H&amp;ES support?</h3>
+
+<p>The grant from H&amp;ES will cover 100% of your project budget, but see the notes above about what is in scope for the programme.</p>
 
 <h3 id="how-can-i-submit-a-proposal">How can I submit a proposal?</h3>
 
