--- a/faq.html
+++ b/faq.html
@@ -221,6 +221,14 @@
 
 <p>Please send your completed case for support template to the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a>. You are welcome to contact the programme office for formative feedback before submission.</p>
 
+<h3 id="proposal-process">Proposal Process</h3>
+
+<p>On the 19th October, you should ONLY submit the Completed Case for Support</p>
+
+<p>If your proposal is accepted and an award agreed, it is at that stage you will be asked to prepare and submit a Je-S form, for formal consideration by the H&amp;ES Delivery Board and UKRI.</p>
+
+<p>If you submit a Je-S form on the 19th October, it will end up being rejected because it has nowhere to go and we will not be releasing Je-S Call details until the award stage.   This will affect your Institution’s grant submission success rate.</p>
+
 <h3 id="what-does-the-review-process-for-submissions-look-like">What does the review process for submissions look like?</h3>
 
 <p>The proposals received during each open call period will be reviewed by an panel with academic and industry expertise. You will receive written feedback on your proposal, and may be invited to present your case for support to the panel. You may be invited to revise and resubmit your proposal in response to panel feedback.</p>
