Updated open call info...

--- a/hes.html
+++ b/hes.html
@@ -222,7 +222,7 @@
 
 <p>Closed calls are available to <a href="https://www.dirac.ac.uk">STFC DiRAC</a> partner institutions and their collaborators only - DiRAC is supporting UKRI to implement the Hardware and Enabling Software programme.</p>
 
-<p>The 2021-2022 <a href="funding">ExCALIBUR H&amp;ES open call</a> is now accepting submissions.</p>
+<p>Submissions to the 2021-2022 <a href="funding">ExCALIBUR H&amp;ES open call</a> are currently being reviewed.</p>
 
 <p><a href="funding" class="button button--large">ExCALIBUR H&amp;ES open call</a></p>
 
