--- a/_pages/hes.html
+++ b/_pages/hes.html
@@ -183,7 +183,7 @@
 
 Closed calls are available to [STFC DiRAC](https://www.dirac.ac.uk) partner institutions and their collaborators only - DiRAC is supporting UKRI to implement the Hardware and Enabling Software programme.
 
-The 2021-2022 [ExCALIBUR H&ES open call](funding) is now accepting submissions.
+Submissions to the 2021-2022 [ExCALIBUR H&ES open call](funding) are currently being reviewed.
 
 <a href="funding" class="button button--large">ExCALIBUR H&ES open call</a>
 
